--- a/CSS/style.css
+++ b/CSS/style.css
@@ -81,6 +81,7 @@ p {
 
 .l-heading {
     font-size: 35px;
+    line-height: 1.2;
 }
   
 /* Padding */
@@ -99,7 +100,7 @@ p {
     color: white;
 }
 
-#navbar h1 {
+#navbar .logo {
     float: left;
     padding-top: 20px;
 }
@@ -149,7 +150,7 @@ p {
 
 /* Home Info */
 #home-info {
-    height: 400px;
+    height: 450px;
 }
 
 #home-info .info-img {
@@ -165,6 +166,10 @@ p {
     text-align: center;
     padding: 50px 30px;
     overflow: hidden;
+}
+
+#home-info .info-content p {
+    padding-bottom: 30px;
 }
 
 /* Features */
@@ -200,7 +205,7 @@ p {
 
 /* Testimonials */
 #testimonials {
-    height: 600px;
+    height: 100%;
     background: url('../img/test-bg.jpg') no-repeat center center/cover;
     padding-top: 100px;
 }
